feat: Add shortcut creation

--- a/src/drive/styles/toolbar.styl
+++ b/src/drive/styles/toolbar.styl
@@ -58,6 +58,8 @@
             background embedurl('../assets/icons/icon-share-dark.svg') 1rem center no-repeat
         &.fil-action-create-note
             background embedurl('../assets/icons/icons-16-icon-note.svg') 1rem center no-repeat
+        &.fil-action-create-shortcut
+            background embedurl('../assets/icons/icon-link.svg') 1rem center no-repeat
 
             .fil-toolbar-menu-recipients
                 position absolute
