Fix: Make the input takes 100% of the width

--- a/src/drive/styles/filenameinput.styl
+++ b/src/drive/styles/filenameinput.styl
@@ -3,6 +3,8 @@
 
 .fil-file-name-input
     @extend $form-text
+    display table-cell
+    width 100%
 
     input[type=text]
         width   100%
