fix: File list on  edge 18

--- a/src/drive/web/modules/filelist/fileopener.styl
+++ b/src/drive/web/modules/filelist/fileopener.styl
@@ -1,8 +1,8 @@
-.container__span
-     display contents
-.container__a
-    width 100%
-    display contents
+.file-opener
+     display flex
+     flex 1 1 auto
+     align-items center
+     width 100%
+.file-opener__a
     text-decoration none
     color var(--coolGrey)
-    align-items center
