refactor: Switch MoreMenu to ActionMenu

--- a/src/drive/styles/toolbar.styl
+++ b/src/drive/styles/toolbar.styl
@@ -29,6 +29,14 @@
 .fil-toolbar-trash
     margin-left auto
     display     flex
+    
+.menu-recipients-wrapper
+  position relative
+  
+.menu-recipients
+    position absolute
+    right    0
+    top      -.5rem
 
 .fil-toolbar-menu
     //!TODO Remove this code after upgrading to cozy-bar@6
