fix: Display the icon and title in ActionMenu

--- a/src/drive/styles/actionmenu.styl
+++ b/src/drive/styles/actionmenu.styl
@@ -33,11 +33,14 @@
 
 .fil-mobileactionmenu-header
     font-weight bold
+    max-width 100%
+    display flex 
 
 .fil-mobileactionmenu-file-name
     overflow hidden
     text-overflow ellipsis
     white-space   nowrap
+    max-width 70%
 
 .fil-mobileactionmenu-file-ext
     color var(--coolGrey)
