--- a/src/drive/styles/actionmenu.styl
+++ b/src/drive/styles/actionmenu.styl
@@ -49,7 +49,13 @@
     line-height rem(18)
 .fil-action-phone-download
     position relative
-    background embedurl('../assets/icons/icon-phone-download.svg') 1rem center no-repeat    
+    background embedurl('../assets/icons/icon-phone-download.svg') 1rem center no-repeat
+
+    [class*='toggle']
+        position absolute
+        top 50%
+        transform translateY(-50%)
+        margin-left 1rem
 .fil-action-openWith
     background embedurl("../assets/icons/icon-link-out-16.svg") 1rem center no-repeat
 .fil-action-download
