feat: Add same color on shargin avatar border than row on hover

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -22,6 +22,9 @@
     &:hover
         .fil-content-file-select
             opacity 1
+        .fil-content-sharestatus
+            span > div:first-child
+                border-color var(--paleGrey)
     &--center
         justify-content center
 
