feat: Add cursor

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -311,6 +311,8 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-status .fil-content-file-placeholder
     animation-delay 1.1s
 
+.fil-content-sharestatus
+    cursor pointer
 +medium-screen()
     .fil-content-table-selection
         .fil-content-body
