fix: Upgrade cozy-ui and use custom style since circle--xsmall was removed

--- a/src/components/sharing/publicBanner.styl
+++ b/src/components/sharing/publicBanner.styl
@@ -6,6 +6,10 @@
     img
         @extend $avatar
         @extend $circle
-        @extend $circle--xsmall
+        width rem(16)	  
+        height rem(16)	    
+        min-width rem(16)	
+        min-height rem(16)	
+        font-size rem(7)
         vertical-align text-bottom
     
