feat: Add certifications columns when adding a folder

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -151,6 +151,10 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-size
     flex 0 0 column-width-small
 
+.fil-content-certification
+    flex 0 0 column-width-thumbnail
+    text-align center
+
 .fil-content-status
 .fil-content-header-status
     flex 0 0 column-width-medium
