feat: Add certifications icons on files for Mobile

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -246,6 +246,10 @@ column-width-thumbnail-bigger = 7rem
     &:focus
         text-decoration underline
 
+    &--icon
+        width rem(10)
+        height rem(10)
+
 .fil-file-infos
     display none
 
