refactor: Rename class content-certification in content-narrow

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -151,7 +151,7 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-size
     flex 0 0 column-width-small
 
-.fil-content-certification
+.fil-content-narrow
     flex 0 0 column-width-thumbnail
     text-align center
 
