refactor: Remove Dialog and use Dialog

--- a/src/photos/styles/albumsList.styl
+++ b/src/photos/styles/albumsList.styl
@@ -27,7 +27,7 @@
         font-size 1rem
         color var(--charcoalGrey)
     .pho-album-description
-        text-align right
+        text-align left
     .pho-album-shared
         position static
         display inline-block
