feat: Add flag plugin to client
to be able to get feature flag from server.
Testing if flag('switcher') is present is no longer required, <FlagSwitcher /> do it on his own

--- a/src/photos/targets/browser/index.ejs
+++ b/src/photos/targets/browser/index.ejs
@@ -32,6 +32,7 @@
     data-cozy-icon-path="{{.IconPath}}"
     data-cozy-tracking="{{.Tracking}}"
     data-cozy-subdomain-type="{{.SubDomain}}"
+    data-cozy-flags="{{.Flags}}"
   ></div>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
   <script src="<%- file %>"></script>
