--- a/src/photos/targets/public/index.ejs
+++ b/src/photos/targets/public/index.ejs
@@ -26,6 +26,7 @@
     data-cozy-app-slug="{{.AppSlug}}"
     data-cozy-icon-path="{{.IconPath}}"
     data-cozy-subdomain-type="{{.SubDomain}}"
+    data-cozy-flags="{{.Flags}}"
   >
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
     <script src="<%- file %>"></script>
