--- a/src/drive/targets/public/index.ejs
+++ b/src/drive/targets/public/index.ejs
@@ -42,6 +42,7 @@
       data-cozy-app-slug="{{.AppSlug}}"
       data-cozy-icon-path="{{.IconPath}}"
       data-cozy-subdomain-type="{{.SubDomain}}"
+      data-cozy-flags="{{.Flags}}"
     ></div>
     <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
     <script src="<%- file %>"></script>
