fix: Adjust Public view style
- Remove useless margin and padding for Mobile
- Flex column to remove vert/hor scrollers around viewer wrapper

--- a/src/drive/web/modules/viewer/barviewer.styl
+++ b/src/drive/web/modules/viewer/barviewer.styl
@@ -2,6 +2,8 @@
 @require '../../../styles/coz-bar-size.styl'
 
 .viewer-wrapper-with-bar
+  display flex
+  flex-direction column
   position absolute
   width 100%
   height "calc(100% - %s)" % $coz-bar-size
