feat: Use Dialog for FeedBackForm and RatingModal

--- a/src/drive/mobile/modules/settings/styles.styl
+++ b/src/drive/mobile/modules/settings/styles.styl
@@ -36,16 +36,6 @@
 .feedback-form
     @extend $form
 
-    .coz-form
-        margin-top 0
-
 .feedback-text
-    box-sizing border-box
-    width 100%
     min-height 12.5rem
-    border .0625rem solid silver
-    padding 1rem
-    margin-bottom 1rem
-
-.button-block
-    text-align right
+    border .0625rem solid var(--dividerColor)
