feat: Add padding on FileListBody if Fab is active

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -350,6 +350,9 @@ column-width-thumbnail-bigger = 7rem
         .fil-content-body
             margin-bottom 3rem
 
+    .fil-content-body--withFabActive
+        padding-bottom calc(56px + 2rem) // Fab size + margins around
+
 +small-screen()
     .fil-content-row
         height 4rem
