--- a/src/photos/targets/browser/index.ejs
+++ b/src/photos/targets/browser/index.ejs
@@ -22,17 +22,7 @@
   </head>
   <div
     role="application"
-    data-cozy-token="{{.Token}}"
-    data-cozy-domain="{{.Domain}}"
-    data-cozy-locale="{{.Locale}}"
-    data-cozy-app-name="{{.AppName}}"
-    data-cozy-app-name-prefix="{{.AppNamePrefix}}"
-    data-cozy-app-editor="{{.AppEditor}}"
-    data-cozy-app-slug="{{.AppSlug}}"
-    data-cozy-icon-path="{{.IconPath}}"
-    data-cozy-tracking="{{.Tracking}}"
-    data-cozy-subdomain-type="{{.SubDomain}}"
-    data-cozy-flags="{{.Flags}}"
+    data-cozy="{{.CozyData}}"
   ></div>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
   <script src="<%- file %>"></script>
