--- a/src/drive/targets/browser/index.ejs
+++ b/src/drive/targets/browser/index.ejs
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
 <html lang="{{.Locale}}">
-  <head>
-    <meta charset="utf-8" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    {{.ThemeCSS}}
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./favicon-32x32.png"
-      sizes="32x32"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./favicon-16x16.png"
-      sizes="16x16"
-    />
-    <link rel="manifest" href="/manifest.json" crossOrigin="use-credentials" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="viewport"
-      content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"
-    />
-    <% if (__STACK_ASSETS__) { %>
-    {{.CozyClientJS}}
+
+<head>
+  <meta charset="utf-8" />
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  {{.ThemeCSS}}
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="/manifest.json" crossOrigin="use-credentials" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover" />
+  <% if (__STACK_ASSETS__) { %>
     {{.CozyBar}}
-    <% } %> <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
-    <link rel="stylesheet" href="<%- file %>" />
-    <% }); %>
-  </head>
-  <div
-    role="application"
-    data-cozy="{{.CozyData}}"
-  ></div>
-  <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
+    <% } %>
+      <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
+        <link rel="stylesheet" href="<%- file %>" />
+        <% }); %>
+</head>
+<div role="application" data-cozy="{{.CozyData}}"></div>
+<% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
   <script src="<%- file %>"></script>
-  <% }); %> <% if (__STACK_ASSETS__ || (__DEVELOPMENT__ && __TARGET__ !==
-  'mobile')) { %>
-  <script src="//{{.Domain}}/assets/js/piwik.js" async></script>
-  <% } %>
+  <% }); %>
+    <% if (__STACK_ASSETS__ || (__DEVELOPMENT__ && __TARGET__ !=='mobile' )) { %>
+      <script src="//{{.Domain}}/assets/js/piwik.js" async></script>
+      <% } %>
+
 </html>
