--- a/src/drive/targets/public/index.ejs
+++ b/src/drive/targets/public/index.ejs
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html lang="{{.Locale}}">
-  <head>
-    <meta charset="utf-8" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    {{.ThemeCSS}}
-    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/public/favicon-32x32.png"
-      sizes="32x32"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/public/favicon-16x16.png"
-      sizes="16x16"
-    />
-    <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="noindex, nofollow, noimageindex" />
-    <% if (__TARGET__ === 'mobile') { %>
+
+<head>
+  <meta charset="utf-8" />
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  {{.ThemeCSS}}
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/public/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/public/favicon-16x16.png" sizes="16x16" />
+  <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="noindex, nofollow, noimageindex" />
+  <% if (__TARGET__==='mobile' ) { %>
     <meta name="format-detection" content="telephone=no" />
     <script src="cordova.js" defer></script>
     <% } else if (__STACK_ASSETS__) { %>
-    {{.CozyClientJS}}
-    {{.CozyBar}}
-    <% } %> <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
-    <link rel="stylesheet" href="<%- file %>" />
-    <% }); %>
-  </head>
-  <body>
-    <div
-      role="application"
-      data-cozy="{{.CozyData}}"
-    ></div>
-    <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
+      {{.CozyBar}}
+      <% } %>
+        <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
+          <link rel="stylesheet" href="<%- file %>" />
+          <% }); %>
+</head>
+
+<body>
+  <div role="application" data-cozy="{{.CozyData}}"></div>
+  <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
     <script src="<%- file %>"></script>
-    <% }); %> <% if (__STACK_ASSETS__ || (__DEVELOPMENT__ && __TARGET__ !==
-    'mobile')) { %>
-    <script src="//{{.Domain}}/assets/js/piwik.js" async></script>
-    <% } %>
-  </body>
+    <% }); %>
+      <% if (__STACK_ASSETS__ || (__DEVELOPMENT__ && __TARGET__ !=='mobile' )) { %>
+        <script src="//{{.Domain}}/assets/js/piwik.js" async></script>
+        <% } %>
+</body>
+
 </html>
