chore(stylint): Stylint with Cozy config each .styl files in src

--- a/src/components/Error/empty.styl
+++ b/src/components/Error/empty.styl
@@ -1,6 +1,6 @@
 @require 'settings/breakpoints'
 
-+small-screen()
++small-screen() // @stylint ignore
     .empty
-        margin-top: calc(50vh - 6rem);
-        transform: translateY(-50%);
+        margin-top calc(50vh - 6rem)
+        transform translateY(-50%)
