--- a/src/components/Error/oops.styl
+++ b/src/components/Error/oops.styl
@@ -1,5 +1,5 @@
 @require 'settings/breakpoints'
 
-+medium-screen()
-  .oops
-    pointer-events auto
++medium-screen() // @stylint ignore
+    .oops
+        pointer-events auto
