--- a/src/drive/mobile/modules/onboarding/styles.styl
+++ b/src/drive/mobile/modules/onboarding/styles.styl
@@ -64,13 +64,13 @@
 // ASSETS
 
 .illustration-photos
-    background      embedurl("./assets/illustrations/illustration-photos.svg") center no-repeat
+    background      embedurl('./assets/illustrations/illustration-photos.svg') center no-repeat
 
 .illustration-analytics
-    background      embedurl("./assets/illustrations/illustration-trophy.svg") center no-repeat
+    background      embedurl('./assets/illustrations/illustration-trophy.svg') center no-repeat
 
 .illustration-files
-    background      embedurl("./assets/illustrations/illustration-files.svg") center no-repeat
+    background      embedurl('./assets/illustrations/illustration-files.svg') center no-repeat
 
 .onboarding-breadcrumb
     display         flex
@@ -83,7 +83,7 @@
         height        .5rem
         width         .5rem
         border-radius 50%
-        margin        0rem .5rem
+        margin        0 .5rem
 
     .onboarding-breadcrumb-element
         background    silver
