--- a/src/drive/styles/actionmenu.styl
+++ b/src/drive/styles/actionmenu.styl
@@ -23,8 +23,8 @@
             background-color var(--silver)
 
 .fil-actionmenu-overlay
-  opacity 0
-  -webkit-tap-highlight-color rgba(0,0,0,0)
+    opacity 0
+    -webkit-tap-highlight-color rgba(0, 0, 0, 0)
 
 .fil-mobileactionmenu
     color      var(--charcoalGrey)
