--- a/src/drive/styles/intentbutton.styl
+++ b/src/drive/styles/intentbutton.styl
@@ -2,17 +2,16 @@
 
 // This ugly rules hide the default close button of the modal
 .intentButton
-    [class*="coz-btn-modal-close"]
-        top: .25rem
-        right: .25rem
+    [class*='coz-btn-modal-close']
+        top .25rem
+        right .25rem
     .coz-modal-intent
-        max-width: none
+        max-width none
 
 .intentViewer
     iframe
-        border: none
-        height: 25rem
-        border-radius: 0.5rem
+        border 0
+        border-radius .5rem
         width 100%
         height 100%
 
