--- a/src/drive/styles/mobile.styl
+++ b/src/drive/styles/mobile.styl
@@ -1,23 +1,21 @@
 @require 'settings/breakpoints.styl'
 
-html {
-    -webkit-user-select: none;
-}
+html
+    -webkit-user-select none
 
-@font-face {
-    font-family: Lato;
-    font-style: normal;
-    font-weight: normal;
+@font-face
+    font-family Lato
+    font-style normal
+    font-weight normal
     src:  url('../mobile/assets/fonts/Lato-Regular.woff2') format('woff2'),
-          url('../mobile/assets/fonts/Lato-Regular.woff') format('woff');
-}
-@font-face {
-    font-family: Lato;
-    font-style: normal;
-    font-weight: bold;
+url('../mobile/assets/fonts/Lato-Regular.woff') format('woff')
+
+@font-face
+    font-family Lato
+    font-style normal
+    font-weight bold
     src:  url('../mobile/assets/fonts/Lato-Bold.woff2') format('woff2'),
-          url('../mobile/assets/fonts/Lato-Bold.woff') format('woff');
-}
+url('../mobile/assets/fonts/Lato-Bold.woff') format('woff')
 
 // this weird selector is here to temporarily hide some buttons in the cozy-bar on mobile:
 // profile, connected devices, support, logout
