--- a/src/drive/web/modules/filelist/fileopener.styl
+++ b/src/drive/web/modules/filelist/fileopener.styl
@@ -1,13 +1,13 @@
-@supports (display: contents) 
-     .file-opener
-          display contents
+@supports (display: contents)
+    .file-opener
+        display contents
 
-@supports not (display: contents)
-     .file-opener
-          display flex
-          flex 1 1 auto
-          align-items center
-          width 100%
+@supports not (display: contents) // @stylint ignore
+    .file-opener
+        display flex
+        flex 1 1 auto
+        align-items center
+        width 100%
 
 .file-opener__a
     text-decoration none
