--- a/src/drive/web/modules/viewer/barviewer.styl
+++ b/src/drive/web/modules/viewer/barviewer.styl
@@ -2,9 +2,9 @@
 @require '../../../styles/coz-bar-size.styl'
 
 .viewer-wrapper-with-bar
-  display flex
-  flex-direction column
-  position absolute
-  width 100%
-  height "calc(100% - %s)" % $coz-bar-size
-  z-index ($bar-index - 2)
+    display flex
+    flex-direction column
+    position absolute
+    width 100%
+    height 'calc(100% - %s)' % $coz-bar-size
+    z-index ($bar-index - 2)
