--- a/src/photos/styles/createAlbumForm.styl
+++ b/src/photos/styles/createAlbumForm.styl
@@ -36,7 +36,7 @@
             &[aria-busy=true]
                 padding-right 1rem
 
-+medium-screen()
++medium-screen() // @stylint ignore
     .pho-create-album-form .coz-inline-form .create-button
         padding-left 1.5rem
         padding-right 1.5rem
