--- a/src/photos/styles/main.styl
+++ b/src/photos/styles/main.styl
@@ -1,8 +1,8 @@
 @require 'cozy-ui'
 
-:global
+// :global
   // Global utils classes comes here
 
 [aria-hidden=true]
-   display: initial
-   visibility: initial
+    display initial
+    visibility initial
