--- a/src/photos/styles/newAlbum.styl
+++ b/src/photos/styles/newAlbum.styl
@@ -24,7 +24,7 @@
     background-color  var(--paleGrey)
     flex              0 0 3.125rem
 
-.pho-panel-header
+.pho-panel-header // @stylint ignore
     padding-bottom 1rem
 
     input[type=text]
@@ -36,9 +36,9 @@
 
     h3
         font-size 1.5rem
-        margin    1rem 0 0.5rem
+        margin    1rem 0 .5rem
 
-.pho-panel-footer
+.pho-panel-footer // @stylint ignore
     padding .6rem 0 0
 
     .pho-panel-controls
