--- a/src/photos/styles/toolbar.styl
+++ b/src/photos/styles/toolbar.styl
@@ -3,6 +3,7 @@
 @require 'components/button.styl'
 @require 'utilities/display.styl'
 
+// @stylint off (duplicate of drive/style/toolbar.styl
 .c-btn
     @extend $button
 
@@ -17,6 +18,7 @@
 
 .c-btn--danger-outline
     @extend $button--danger-outline
+// @stylint on
 
 .pho-toolbar
     display flex
