--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -25,7 +25,7 @@
     cursor default
 
     &:hover
-      background inherit
+        background inherit
 
 .fil-content-row-bigger
     height rem(128)
@@ -53,12 +53,11 @@
     &.fil-sort-menu-item-selected
         border-left 5px solid var(--dodgerBlue)
         font-weight bold
-
         &:after
             display inline-block
             content ''
             position absolute
-            right 0.5rem
+            right .5rem
             width 2rem
             height 1.5rem
             background transparent embedurl('../assets/icons/icon-check-blue.svg') center .0625rem no-repeat
@@ -86,10 +85,7 @@
 .fil-content-header-sortasc
     color var(--charcoalGrey)
 
-.fil-content-header-sortdesc
-.fil-content-header-sortasc
-.fil-content-header-sortabledesc
-.fil-content-header-sortableasc
+.fil-content-header-sortdesc, .fil-content-header-sortasc, .fil-content-header-sortabledesc, .fil-content-header-sortableasc
     cursor pointer
 
 column-width-large = 40%
@@ -111,6 +107,7 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-header.fil-content-file
     padding-left 0
 
+// @stylint off
 .fil-content-cell
     &.fil-content-file
         flex 0 1 "calc(%s - %s)" % (column-width-large column-width-thumbnail)
@@ -341,8 +338,7 @@ column-width-thumbnail-bigger = 7rem
     .fil-content-file-action
         button
             background silver
-            opacity: 1
-
+            opacity 1
 // -- responsive
 
 +medium-screen()
@@ -354,6 +350,7 @@ column-width-thumbnail-bigger = 7rem
         padding-bottom calc(56px + 2rem) // Fab size + margins around
 
 +small-screen()
+// @stylint on
     .fil-content-row
         height 4rem
 
