--- a/src/drive/web/modules/navigation/Breadcrumb/breadcrumb.styl
+++ b/src/drive/web/modules/navigation/Breadcrumb/breadcrumb.styl
@@ -66,7 +66,7 @@
     color          var(--primaryTextColor)
     font-weight    bold
 
-+small-screen()
++small-screen() // @stylint ignore
     .fil-path-backdrop
         min-width 0
         width auto
@@ -109,7 +109,7 @@
 
         .fil-path-link
         .fil-path-current
-            padding-left "calc(%s + .25rem)" % $coz-bar-size
+            padding-left 'calc(%s + .25rem)' % $coz-bar-size
 
         .fil-path-link
             display flex
