--- a/src/drive/web/modules/viewer/styles.styl
+++ b/src/drive/web/modules/viewer/styles.styl
@@ -4,14 +4,14 @@
 .pho-viewer-noviewer-cta
     position         relative
     border-radius    .5rem
-    background-color rgba(255, 255, 255, 0.05)
+    background-color rgba(255, 255, 255, .05)
     padding          1rem
     width            80%
     max-width        36rem
     margin-top       2rem
 
     +medium-screen()
-      display none
+        display none
 
     .pho-viewer-noviewer-cta-cross
         position absolute
@@ -20,7 +20,7 @@
         cursor   pointer
 
     h3
-        margin 0 0 1.1rem 0
+        margin 0 0 1.1rem
 
     h3:before
         content      ''
