--- a/src/photos/ducks/upload/styles.styl
+++ b/src/photos/ducks/upload/styles.styl
@@ -17,7 +17,7 @@
     background-color var(--white)
     display          flex
     flex-direction   column
-    transition       0.5s
+    transition       .5s
     opacity          0
     visibility       hidden
     transform        translateY(18.75rem)
@@ -32,7 +32,7 @@
     color            var(--charcoalGrey)
     font-weight      bold
     margin           0
-    padding          .5rem 1rem .5rem
+    padding          .5rem 1rem
 
     .upload-queue-header-inner
         display flex
@@ -51,7 +51,7 @@
 progress.upload-queue-progress
     -webkit-appearance none
     -moz-appearance    none
-    border     none
+    border     0
     display    block
     width      100%
     height     .125rem
@@ -130,7 +130,7 @@ progress.upload-queue-progress::-moz-progress-bar
         font-weight    bold
         line-height    2rem
 
-+medium-screen()
++medium-screen() // @stylint ignore
     // we need to cover the border-bottom of the cozy-bar
     $coz-bar-size = 3rem
     $coz-bar-border-size = .0625rem
