--- a/src/photos/styles/layout.styl
+++ b/src/photos/styles/layout.styl
@@ -12,7 +12,7 @@
         padding 0
 
 .pho-content-wrapper
-.pho-content-wrapper > [role=main]
+.pho-content-wrapper > [role=main] // @stylint ignore
     position        relative
     display         flex
     flex-direction  column
