--- a/src/photos/styles/photoList.styl
+++ b/src/photos/styles/photoList.styl
@@ -46,9 +46,9 @@
         margin            0 1rem 1rem 0
 
         a
-          vertical-align middle
+            vertical-align middle
         +small-screen()
-          margin 0 .5rem .5rem 0
+            margin 0 .5rem .5rem 0
 
     .pho-photo-item
         height       15rem
@@ -64,7 +64,7 @@
         cursor   pointer
 
         &[data-input=checkbox] label::before
-            box-shadow 0 0 0 .1875rem rgba(0,0,0,.3), inset 0 0 0 1.5rem rgba(255,255,255,.8)
+            box-shadow 0 0 0 .1875rem rgba(0, 0, 0, .3),  inset 0 0 0 1.5rem rgba(255, 255, 255, .8)
 
 
         &[data-input=checkbox] input[type=checkbox]:checked + label::after
@@ -77,7 +77,7 @@
 
     .pho-photo--selected
         .pho-photo-item
-            transform:scale(0.9);
+            transform:scale(.9)
 
     .pho-section--has-selection
         .pho-photo-select
