fix(photos): Build failed because of incorrect require

--- a/src/photos/styles/topbar.styl
+++ b/src/photos/styles/topbar.styl
@@ -1,7 +1,8 @@
 @require 'components/forms.styl'
 @require 'settings/breakpoints.styl'
 @require 'settings/z-index.styl'
-@require 'styles/coz-bar-size.styl'
+
+$coz-bar-size = 3rem // @stylint ignore
 
 .pho-content-header
     display       flex
