--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -62,3 +62,6 @@
                 max-width 100%
                 height 100%
                 padding .5625em 1em .5625em .625em
+
+            .bar-search-input-group-clean-button
+                padding 11px
