--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -1,86 +1,60 @@
 [role=banner]
-
-    .coz-searchbar-autosuggest-container
-        width 100%
-        position relative
-
-    .coz-searchbar-autosuggest-suggestions-container
+    .bar-search-autosuggest-suggestions-container
         position absolute
         top 100%
-        margin-top 3px
         width 100%
         max-height em(170px)
         overflow auto
-        border-width 1px
-        border-style solid
-        border-color var(--silver)
-        border-radius 4px
+        border-radius 8px
         background white
-        box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)
+        box-shadow 0 0 0 .5px rgba(29, 33, 42, .12), 0 5px 7px -2px rgba(29, 33, 42, .12), 0 6px 25px 2px rgba(29, 33, 42, .11)
         display none
         box-sizing border-box
-    .coz-searchbar-autosuggest-suggestions-container--open
+    .bar-search-autosuggest-suggestions-container--open
         display block
-    .coz-searchbar-autosuggest-status-container
+    .bar-search-autosuggest-status-container
         position absolute
         top 100%
         left 0
         right 0
-        margin -.3em .8em .3em
-        padding .8em .5em
+        padding .84em 1em
         max-height em(170px)
         overflow auto
-        border-width 1px
-        border-style solid
-        border-color var(--silver)
-        border-radius 4px
+        border-radius 8px
         background white
-        box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)
-    .coz-searchbar-autosuggest-suggestions-list
+        box-shadow 0 0 0 .5px rgba(29, 33, 42, .12), 0 5px 7px -2px rgba(29, 33, 42, .12), 0 6px 25px 2px rgba(29, 33, 42, .11)
+        box-sizing border-box
+    .bar-search-autosuggest-suggestions-list
         margin 0
         padding 0
         list-style none
-        b
-            font-weight bolder
-            color var(--scienceBlue)
 
     .bar-search-container
+        position relative
         height 100%
         display flex
-        justify-content flex-start
         align-items center
         flex-grow 1
-        padding .3em .8em .3em .7em
-        box-sizing border-box
-        position relative
+        margin .25em 2em
 
         .bar-search-input-group
             height 100%
-            padding-left .5em
-            border 1px solid transparent
-            border-radius 4px
+            padding-left 1em
+            border-radius 2.25em
+            background-color var(--defaultBackgroundColor)
             transition all .2s ease-out
-            opacity .4
+            overflow hidden
+            border 1px solid transparent
 
             &:hover
                 border-color var(--silver)
 
             &.--focused, &:focus-within
-                opacity 1
                 outline 0
                 border-color var(--dodgerBlue)
 
             input
-                width 100%
+                background-color transparent
+                max-width 100%
                 height 100%
-                padding .5em
-
-[role=banner] .coz-searchbar-autosuggest-input:focus,
-    [role=banner] .coz-searchbar-autosuggest-input-focused
-        outline 0
-        border-color var(--dodgerBlue)
-
-@media (max-width: 48em)
-    [role=banner]
-        .coz-searchbar
-            display 0
+                padding .5625em 1em .5625em .625em
