feat: Add SearchView to mobile

--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -37,6 +37,10 @@
         flex-grow 1
         margin .25em 2em
 
+        &.mobile
+            padding .25em 0
+            margin-right -.5em
+
         .bar-search-input-group
             height 100%
             padding-left 1em
