--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -68,3 +68,10 @@
                 background-color transparent
                 max-width 100%
                 height 100%
+
+.suggestion-item-parent-link
+    color var(--coolGrey)
+    text-decoration none
+
+    &:hover
+        text-decoration underline
