fix: Use cozy fonts again
Before cozy fonts were imported with `{{ .cozyBar }}`  served from the stack. We bundle `cozy-bar` as a vendor now so we have to import fonts into index.ejs

--- a/src/drive/targets/browser/index.ejs
+++ b/src/drive/targets/browser/index.ejs
@@ -26,6 +26,7 @@
     />
     <% if (__STACK_ASSETS__) { %>
     {{.CozyClientJS}}
+    {{.CozyFonts}}
     <% } %> <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
     <link rel="stylesheet" href="<%- file %>" />
     <% }); %>
