--- a/src/photos/targets/browser/index.ejs
+++ b/src/photos/targets/browser/index.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="<%- file %>" />
     <% }); %> <% if (__STACK_ASSETS__) { %>
     {{.CozyClientJS}}
+    {{.CozyFonts}}
     <% } %>
   </head>
   <div
