--- a/src/drive/targets/public/index.ejs
+++ b/src/drive/targets/public/index.ejs
@@ -26,6 +26,7 @@
     <script src="cordova.js" defer></script>
     <% } else if (__STACK_ASSETS__) { %>
     {{.CozyClientJS}}
+    {{.CozyFonts}}
     <% } %> <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %>
     <link rel="stylesheet" href="<%- file %>" />
     <% }); %>
