--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -5,7 +5,7 @@
         width 100%
         max-height em(170px)
         overflow auto
-        border-radius 8px
+        border-radius .5em
         background white
         box-shadow 0 0 0 .5px rgba(29, 33, 42, .12), 0 5px 7px -2px rgba(29, 33, 42, .12), 0 6px 25px 2px rgba(29, 33, 42, .11)
         display none
@@ -14,13 +14,16 @@
         display block
     .bar-search-autosuggest-status-container
         position absolute
+        display flex
+        align-items center
         top 100%
         left 0
         right 0
-        padding .84em 1em
+        padding .75em 1em
+        min-height 48px
         max-height em(170px)
         overflow auto
-        border-radius 8px
+        border-radius .5em
         background white
         box-shadow 0 0 0 .5px rgba(29, 33, 42, .12), 0 5px 7px -2px rgba(29, 33, 42, .12), 0 6px 25px 2px rgba(29, 33, 42, .11)
         box-sizing border-box
@@ -31,37 +34,31 @@
 
     .bar-search-container
         position relative
-        height 100%
         display flex
         align-items center
         flex-grow 1
-        margin .25em 2em
+        margin-left 2em
+        margin-right 2em
+        padding-top .25em
+        padding-bottom .25em
 
         &.mobile
-            padding .25em 0
+            margin-left 0
             margin-right -.5em
 
         .bar-search-input-group
-            height 100%
+            border 0
+            max-height 40px
             padding-left 1em
-            border-radius 2.25em
+            border-radius 1.25em
             background-color var(--defaultBackgroundColor)
             transition all .2s ease-out
             overflow hidden
-            border 1px solid transparent
 
             &:hover
-                border-color var(--silver)
-
-            &.--focused, &:focus-within
-                outline 0
-                border-color var(--dodgerBlue)
+                background linear-gradient(0deg, var(--actionColorHover), var(--actionColorHover)), var(--defaultBackgroundColor)
 
             input
                 background-color transparent
                 max-width 100%
                 height 100%
-                padding .5625em 1em .5625em .625em
-
-            .bar-search-input-group-clean-button
-                padding 11px
