--- a/src/drive/web/modules/search/components/styles.styl
+++ b/src/drive/web/modules/search/components/styles.styl
@@ -19,7 +19,6 @@
         top 100%
         left 0
         right 0
-        padding .75em 1em
         min-height 48px
         max-height em(170px)
         overflow auto
@@ -27,6 +26,8 @@
         background white
         box-shadow 0 0 0 .5px rgba(29, 33, 42, .12), 0 5px 7px -2px rgba(29, 33, 42, .12), 0 6px 25px 2px rgba(29, 33, 42, .11)
         box-sizing border-box
+        &.--empty
+            padding .75em 1em
     .bar-search-autosuggest-suggestions-list
         margin 0
         padding 0
@@ -49,7 +50,7 @@
         .bar-search-input-group
             border 0
             max-height 40px
-            padding-left 1em
+            padding-left .5em
             border-radius 1.25em
             background-color var(--defaultBackgroundColor)
             transition all .2s ease-out
@@ -58,7 +59,12 @@
             &:hover
                 background linear-gradient(0deg, var(--actionColorHover), var(--actionColorHover)), var(--defaultBackgroundColor)
 
+            .bar-search-input-group-append
+                padding-left .5em
+                color var(--secondaryTextColor)
+
             input
+                padding-left .5em
                 background-color transparent
                 max-width 100%
                 height 100%
