feat(File): Add new sharing status badge before actions

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -147,12 +147,18 @@ column-width-thumbnail-bigger = 7rem
         background-color var(--malachite)
         border-radius 50%
 
+.fil-content-header-sharing-shortcut
+.fil-content-sharing-shortcut
+    width 1rem
+    padding 0
+    flex-shrink 0
+
 .fil-content-file-action
 .fil-content-header-action
     display flex
     justify-content flex-end
     flex 1
-    width 1.5rem
+    width 4.8rem
     padding-right .8rem
     margin-right 2rem
 
