refactor: Move styles folder at src root

--- a/src/drive/web/modules/navigation/Breadcrumb/breadcrumb.styl
+++ b/src/drive/web/modules/navigation/Breadcrumb/breadcrumb.styl
@@ -2,7 +2,7 @@
 @require 'settings/palette.styl'
 @require 'settings/breakpoints.styl'
 @require 'settings/z-index.styl'
-@require '../../../../styles/coz-bar-size.styl'
+@require '../../../../../styles/coz-bar-size.styl'
 
 .fil-path-backdrop
     flex 1 1 auto
@@ -50,7 +50,7 @@
     height      .625rem
     margin-left .4375rem
     border      0
-    background  embedurl('../../../../assets/icons/icon-arrow-down.svg') center center no-repeat
+    background  embedurl('../../../../../assets/icons/icon-arrow-down.svg') center center no-repeat
 
 .fil-path-current-name
     text-overflow  ellipsis
