--- a/src/drive/web/modules/viewer/barviewer.styl
+++ b/src/drive/web/modules/viewer/barviewer.styl
@@ -1,5 +1,5 @@
 @require 'settings/z-index.styl'
-@require '../../../styles/coz-bar-size.styl'
+@require '../../../../styles/coz-bar-size.styl'
 
 .viewer-wrapper-with-bar
     display flex
