--- a/src/targets/browser/index.ejs
+++ b/src/targets/browser/index.ejs
@@ -20,6 +20,7 @@
     <link rel="manifest" href="/manifest.json" crossOrigin="use-credentials" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="color-scheme" content="only light" />
     <meta
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"
