--- a/src/targets/public/index.ejs
+++ b/src/targets/public/index.ejs
@@ -19,6 +19,7 @@
     />
     <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="color-scheme" content="only light" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow, noimageindex" />
     <% if (__STACK_ASSETS__) { %>
