feat: Migrate from cozy-bar v10 to v11
feat: Improve bar integration

--- a/src/targets/browser/index.ejs
+++ b/src/targets/browser/index.ejs
@@ -32,10 +32,10 @@
     <link rel="stylesheet" href="<%- file %>" />
     <% }); %>
   </head>
-  <div
-    role="application"
-    data-cozy="{{.CozyData}}"
-  ></div>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div role="application" data-cozy="{{.CozyData}}"></div>
+  </body>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
   <script src="<%- file %>"></script>
   <% }); %>
