fix: Disable update time for addFolder row
- Using LastUpdate component with undefined date,
this will keep homogeneity with other rows
- Also adjust CSS so that input folder name and other existing
folder names keep the same width
and stay aligned

--- a/src/styles/filelist.styl
+++ b/src/styles/filelist.styl
@@ -90,7 +90,8 @@ column-width-thumbnail-bigger = 7rem
 // @stylint off
 .fil-content-cell
     &.fil-content-file
-        flex 0 1 "calc(%s - %s)" % (column-width-large column-width-thumbnail)
+        // When the cell is a filename (or new a directory name input), we don't want flex to shrink it
+        flex 0 0 "calc(%s - %s)" % (column-width-large column-width-thumbnail)
         display flex
         align-items center
         padding   0 2rem 0 0
